# Arch-Installer

./: .editorconfig  CMakeLists.txt  CMakeProjectConfig.h.in  README.md
src/: CLI.h  Input.h  Installer.h  KeyEvent.h  Menu.h  Renderer.h  main.cpp
